--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -10,7 +9,7 @@
 
   <groupId>org.rundeck-plugins</groupId>
   <artifactId>rundeck-plugins-parent</artifactId>
-  <version>1-SNAPSHOT</version>
+  <version>1</version>
   <packaging>pom</packaging>
 
   <name>rundeck-plugins-parent</name>
@@ -74,6 +73,7 @@
     <connection>scm:git:git@github.com:rundeck-plugins/rundeck-plugins-parent.git</connection>
     <developerConnection>scm:git:git@github.com:rundeck-plugins/rundeck-plugins-parent.git</developerConnection>
     <url>git@github.com:rundeck-plugins/rundeck-plugins-parent.git</url>
+    <tag>rundeck-plugins-parent-1</tag>
   </scm>
 
 </project>
