--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,17 @@
     </license>
   </licenses>
 
+  <properties>
+    <rundeckVersion>1.5.3</rundeckVersion>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <build>
     <pluginManagement>
       <plugins>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.0</version>
+          <version>3.1</version>
           <configuration>
             <source>1.6</source>
             <target>1.6</target>
@@ -38,7 +43,7 @@
           <!-- upgrade from 2.1 to 2.4 to pick up latest git fixes -->
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.4</version>
+          <version>2.4.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -52,10 +57,6 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
-
-  <properties>
-    <rundeckVersion>1.5</rundeckVersion>
-  </properties>
 
   <developers>
     <developer>
