--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>org.rundeck-plugins</groupId>
   <artifactId>rundeck-plugins-parent</artifactId>
-  <version>3-SNAPSHOT</version>
+  <version>3</version>
   <packaging>pom</packaging>
 
   <name>rundeck-plugins-parent</name>
@@ -74,7 +74,7 @@
     <connection>scm:git:git@github.com:rundeck-plugins/rundeck-plugins-parent.git</connection>
     <developerConnection>scm:git:git@github.com:rundeck-plugins/rundeck-plugins-parent.git</developerConnection>
     <url>git@github.com:rundeck-plugins/rundeck-plugins-parent.git</url>
-    <tag>HEAD</tag>
+    <tag>rundeck-plugins-parent-3</tag>
   </scm>
 
 </project>
